# ERPnextoras

./: .gitignore  HANDOVER.md  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
munzer_app/: hooks.py  modules.txt  patches.txt
munzer_app/config/: desktop.py
munzer_app/munzer_app/: api.py
munzer_app/munzer_app/page/inventory_workstation/: inventory_workstation.js  inventory_workstation.json
munzer_app/munzer_app/report/item_master_report_s/: item_master_report_s.json
munzer_app/munzer_oras_app/: api.py
munzer_app/munzer_oras_app/page/inventory_workstation/: inventory_workstation.js  inventory_workstation.json
munzer_app/munzer_oras_app/report/item_master_report_s/: item_master_report_s.js  item_master_report_s.json
munzer_app/patches/v0_0_1/: rename_module_to_munzer_oras_app.py
oras/oras/report/item_master_report_s/: item_master_report_s.json  item_master_report_s.py
